:pencil2: uppercase cathylin

--- a/AUTHORS
+++ b/AUTHORS
@@ -112,25 +112,25 @@ Week 1 - Crypto
 
 初识 RSA
 A:	Hanson
-T:	cathylin
+T:	Cathylin
 
 随机数之旅 1
-A:	cathylin
+A:	Cathylin
 T:	L1nk
 T:	Hanson
 
 SageMath 使用指南
-A:	cathylin
+A:	Cathylin
 T:	L1nk
 T:	Hanson
 
 唯一表示
-A:	cathylin
+A:	Cathylin
 T:	willyz
 T:	Hanson
 
 小跳蛙
-A:	cathylin
+A:	Cathylin
 T:	L1nk
 T:	Hanson
 T:	KAMIYA
@@ -262,22 +262,22 @@ Week 2 - Crypto
 
 DLP_1
 A:	Hanson
-T:	cathylin
+T:	Cathylin
 
 FHE: 0&1
-A:	cathylin
+A:	Cathylin
 T:	Hanson
 
 群论小测试
-A:	cathylin
+A:	Cathylin
 
 置换
-A:	cathylin
+A:	Cathylin
 T:	Hanson
 
 RSA_revenge
 A:	Hanson
-T:	cathylin
+T:	Cathylin
 
 Week 2 - Misc
 ----------------
@@ -405,17 +405,17 @@ A:	gloriablack
 T:	Hanson
 
 欧皇的生日
-A:	cathylin
+A:	Cathylin
 T:	gloriablack
 T:	Hanson
 T:	KAMIYA
 
 随机数之旅 3
-A:	cathylin
+A:	Cathylin
 T:	Hanson
 
 GCL
-A:	cathylin
+A:	Cathylin
 T:	Hanson
 
 Week 3 - Misc
@@ -529,12 +529,12 @@ Week 4 - Crypto
 ----------------
 
 独一无二
-A:	cathylin
+A:	Cathylin
 T:	KAMIYA
 T:	Hanson
 
 随机数之旅 4
-A:	cathylin
+A:	Cathylin
 T:	KAMIYA
 T:	Hanson
 T:	Icesugar
@@ -548,7 +548,7 @@ T:	Hanson
 A:	gloriablack
 
 天虫的秘密
-A:	cathylin
+A:	Cathylin
 
 Week 4 - Misc
 ----------------
@@ -657,16 +657,16 @@ Week 5 - Crypto
 ----------------
 
 不给你看喵
-A:	cathylin
+A:	Cathylin
 
 BLS 多重签名：零的裂变
 A:	gloriablack
 
 Poly
-A:	cathylin
+A:	Cathylin
 
 Smile 盒
-A:	cathylin
+A:	Cathylin
 
 Week 5 - Misc
 ----------------
